// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnimatedTabs visual > renderiza estável no desktop 1`] = `
<div>
  <div
    style="width: 1024px;"
  >
    <div
      class="flex w-full max-w-lg flex-col gap-y-3"
    >
      <div
        class="relative min-h-[16rem] overflow-hidden rounded-2xl border border-white/10 bg-[#4B0082]/70 px-3 py-4 shadow-[0_12px_30px_rgba(0,0,0,0.25)] backdrop-blur-sm sm:min-h-[11rem] lg:min-h-[7rem]"
      >
        <div
          class="flex w-full flex-wrap justify-center gap-2"
        >
          <button
            class="relative min-w-[7.5rem] flex-1 overflow-hidden rounded-xl px-2.5 py-2 text-center text-xs font-semibold text-white outline-none transition-all hover:-translate-y-0.5 hover:bg-white/10 focus-visible:ring-2 focus-visible:ring-white/40 sm:min-w-[9rem] sm:px-3 sm:text-sm"
            type="button"
          >
            <div
              class="absolute inset-0 !rounded-xl bg-[#2A004B]/85 shadow-[0_12px_24px_rgba(0,0,0,0.25)]"
            />
            <span
              class="relative z-10 block w-full truncate"
            >
              02 mar · 13h
            </span>
          </button>
          <button
            class="relative min-w-[7.5rem] flex-1 overflow-hidden rounded-xl px-2.5 py-2 text-center text-xs font-semibold text-white outline-none transition-all hover:-translate-y-0.5 hover:bg-white/10 focus-visible:ring-2 focus-visible:ring-white/40 sm:min-w-[9rem] sm:px-3 sm:text-sm"
            type="button"
          >
            <span
              class="relative z-10 block w-full truncate"
            >
              02 mar · 18h
            </span>
          </button>
          <button
            class="relative min-w-[7.5rem] flex-1 overflow-hidden rounded-xl px-2.5 py-2 text-center text-xs font-semibold text-white outline-none transition-all hover:-translate-y-0.5 hover:bg-white/10 focus-visible:ring-2 focus-visible:ring-white/40 sm:min-w-[9rem] sm:px-3 sm:text-sm"
            type="button"
          >
            <span
              class="relative z-10 block w-full truncate"
            >
              03 mar · 13h
            </span>
          </button>
          <button
            class="relative min-w-[7.5rem] flex-1 overflow-hidden rounded-xl px-2.5 py-2 text-center text-xs font-semibold text-white outline-none transition-all hover:-translate-y-0.5 hover:bg-white/10 focus-visible:ring-2 focus-visible:ring-white/40 sm:min-w-[9rem] sm:px-3 sm:text-sm"
            type="button"
          >
            <span
              class="relative z-10 block w-full truncate"
            >
              03 mar · 18h
            </span>
          </button>
        </div>
      </div>
      <div
        class="relative min-h-60 h-full overflow-hidden rounded-2xl border border-white/10 bg-[#3A0065]/70 p-5 text-white shadow-[0_16px_36px_rgba(0,0,0,0.25)] backdrop-blur-sm sm:p-6"
      >
        <div
          style="opacity: 0; filter: blur(10px); transform: translateX(-10px) scale(0.95);"
        >
          <div>
            Curso 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnimatedTabs visual > renderiza estável no mobile 1`] = `
<div>
  <div
    style="width: 360px;"
  >
    <div
      class="flex w-full max-w-lg flex-col gap-y-3"
    >
      <div
        class="relative min-h-[16rem] overflow-hidden rounded-2xl border border-white/10 bg-[#4B0082]/70 px-3 py-4 shadow-[0_12px_30px_rgba(0,0,0,0.25)] backdrop-blur-sm sm:min-h-[11rem] lg:min-h-[7rem]"
      >
        <div
          class="flex w-full flex-wrap justify-center gap-2"
        >
          <button
            class="relative min-w-[7.5rem] flex-1 overflow-hidden rounded-xl px-2.5 py-2 text-center text-xs font-semibold text-white outline-none transition-all hover:-translate-y-0.5 hover:bg-white/10 focus-visible:ring-2 focus-visible:ring-white/40 sm:min-w-[9rem] sm:px-3 sm:text-sm"
            type="button"
          >
            <div
              class="absolute inset-0 !rounded-xl bg-[#2A004B]/85 shadow-[0_12px_24px_rgba(0,0,0,0.25)]"
            />
            <span
              class="relative z-10 block w-full truncate"
            >
              02 mar · 13h
            </span>
          </button>
          <button
            class="relative min-w-[7.5rem] flex-1 overflow-hidden rounded-xl px-2.5 py-2 text-center text-xs font-semibold text-white outline-none transition-all hover:-translate-y-0.5 hover:bg-white/10 focus-visible:ring-2 focus-visible:ring-white/40 sm:min-w-[9rem] sm:px-3 sm:text-sm"
            type="button"
          >
            <span
              class="relative z-10 block w-full truncate"
            >
              02 mar · 18h
            </span>
          </button>
          <button
            class="relative min-w-[7.5rem] flex-1 overflow-hidden rounded-xl px-2.5 py-2 text-center text-xs font-semibold text-white outline-none transition-all hover:-translate-y-0.5 hover:bg-white/10 focus-visible:ring-2 focus-visible:ring-white/40 sm:min-w-[9rem] sm:px-3 sm:text-sm"
            type="button"
          >
            <span
              class="relative z-10 block w-full truncate"
            >
              03 mar · 13h
            </span>
          </button>
          <button
            class="relative min-w-[7.5rem] flex-1 overflow-hidden rounded-xl px-2.5 py-2 text-center text-xs font-semibold text-white outline-none transition-all hover:-translate-y-0.5 hover:bg-white/10 focus-visible:ring-2 focus-visible:ring-white/40 sm:min-w-[9rem] sm:px-3 sm:text-sm"
            type="button"
          >
            <span
              class="relative z-10 block w-full truncate"
            >
              03 mar · 18h
            </span>
          </button>
        </div>
      </div>
      <div
        class="relative min-h-60 h-full overflow-hidden rounded-2xl border border-white/10 bg-[#3A0065]/70 p-5 text-white shadow-[0_16px_36px_rgba(0,0,0,0.25)] backdrop-blur-sm sm:p-6"
      >
        <div
          style="opacity: 0; filter: blur(10px); transform: translateX(-10px) scale(0.95);"
        >
          <div>
            Curso 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
